--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --hot --inline",
+    "start": "node server.js",
     "prod": "webpack -p",
     "test": "webpack --config ./webpack.test.config.js -w"
   },
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
+    "express": "^4.14.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0"
