--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "babel-preset-stage-2": "^6.17.0",
     "html-webpack-plugin": "^2.22.0",
     "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack-dev-server": "^1.16.1",
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.1",
+    "foundation-sites": "^6.2.4",
+    "jquery": "^3.1.1",
+    "script-loader": "^0.7.0"
   },
   "dependencies": {
     "express": "^4.14.0",
