--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "style-loader": "^0.13.1",
     "foundation-sites": "^6.2.4",
     "jquery": "^3.1.1",
+    "node-sass": "^3.11.2",
+    "sass-loader": "^4.0.2",
     "script-loader": "^0.7.0"
   },
   "dependencies": {
